# glassknife

./: README.rst  pyproject.toml
glassknife/: common.py  config.py  make_indexes.py  process_notes.py
tests/: test_obsidian.py
